<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="studio.waterwell.villaapp.Fragmentos.fragRincon">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/lugar_nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="TextView"
            android:textSize="20dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:layout_below="@+id/lugar_imagen"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/lugar_direccion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:layout_below="@+id/lugar_nombre"
            android:layout_alignStart="@+id/lugar_rate" />

        <TextView
            android:id="@+id/lugar_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="13dp"
            android:text="Puntuacion : Sin puntuaciones de usuario"
            android:layout_below="@+id/lugar_direccion"
            android:layout_alignStart="@+id/lugar_opinion" />

        <Button
            android:id="@+id/lugar_atras"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="14dp"
            android:text="@string/lugar_atras" />

        <Button
            android:id="@+id/lugar_ruta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/lugar_atras"
            android:layout_toStartOf="@+id/lugar_atras"
            android:text="@string/lugar_ruta" />

        <Button
            android:id="@+id/lugar_opinion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/lugar_ruta"
            android:layout_toStartOf="@+id/lugar_ruta"
            android:text="@string/lugar_opinion1" />

        <RelativeLayout
            android:id="@+id/layout_descripcion"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_below="@+id/lugar_rate"
            android:layout_alignParentStart="true"
            android:layout_marginTop="11dp">

            <TextView
                android:id="@+id/lugar_descripcion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:id="@+id/relativeLayout"
            android:layout_below="@+id/layout_descripcion"
            android:layout_alignParentStart="true">

            <RelativeLayout
                android:id="@+id/layout_lista"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="invisible">

                <ListView
                    android:id="@+id/lista_opiniones"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layout_carga"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="13dp">

                <ProgressBar
                    android:id="@+id/carga_opiniones"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="39dp" />
            </RelativeLayout>
        </RelativeLayout>

        <ImageView
            android:id="@+id/lugar_imagen"
            android:layout_width="match_parent"
            android:layout_height="115dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            app:srcCompat="@android:color/holo_green_light" />

    </RelativeLayout>

</FrameLayout>
